# SigBERT

./: LICENSE  README.md  pyproject.toml
data/: README.md
models/: README.md
notebooks/: sigbert_study-MultiModal-LandMark.ipynb  sigbert_study.ipynb
results/: c-index_by_nbr_reports_on_true_data.csv
src/sigbert/: _utils.py  metrics_plot_results_pkg.py  signature_pkg.py  survival_analysis_pkg.py
