[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "sigbert", from = "src" }]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pynvml = "^11.5.0"
pandas = "^2.1"
transformers = "4.37.2"
trl = "^0.7.4"
peft = "^0.6.2"
bitsandbytes = "^0.41.2.post2"
accelerate = "0.27.2"
auto-gptq = "^0.5.1"
optimum = "^1.14.1"
scipy = "1.10.1"
setuptools = "^69.0.2"
prettyprinter = "^0.18.0"
gputil = "^1.4.0"
tabulate = "^0.9.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"
nltk = "^3.8.1"
gensim = "^4.3.2"
pip-system-certs = "^4.0"
mlflow = "^2.11.3"
faker = "^24.4.0"
sklearn-pandas = "^2.2.0"
word2number = "^1.1"
autoawq = "^0.2.4"
shap = "^0.45.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
plotly = "^5.20.0"
seaborn = "^0.13.2"
kaleido = "0.2.1"
optuna = "^3.6.1"
setfit = "^1.0.3"
tensorflow = "^2.16.1"
torch = "^2.3.0"
sweetviz = "^2.3.1"
esig = "^0.9.8.3"
sigtools = "^4.0.1"
kan = "^0.0.2"
pykan = "^0.0.5"
tqdm = "^4.66.4"
roughpy = "^0.1.1"
scikit-learn = ">=1.3.0,<1.4"
scikit-survival = "^0.22.2"
joblib = "^1.4.2"
numpy = "1.23.5"
skglm = "^0.3.1"
numba = "^0.60.0"
lifelines = "^0.29.0"
mapie = "^0.8.6"
survivaleval = "^0.2.7"
cvxpy = "^1.5.3"
torchcp = "^0.1.3"
papermill = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
mypy = "^1.7.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.26.0"
black = "^23.11.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
